# noise-image-encoder

./: .gitignore  accordion_widget.py  app.py  config_manager.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  resource_processor.py
tests/: __init__.py  test_animated_image_combining.py  test_common_utils.py  test_ffmpeg_utils.py  test_integration.py  test_video_combining.py  test_video_info.py  test_video_loading.py
utils/: __init__.py  encoding.py  image.py
utils/video/: __init__.py  common.py  ffmpeg.py  opencv.py  plantform.py
