[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "steganography-encoder"
version = "1.0.0"
description = "A GUI application for encoding and decoding files using steganography techniques"
readme = "README.md"
authors = [
    {name = "fuyouawa", email = "fuyouawa@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Utilities",
]
keywords = ["steganography", "encoding", "decoding", "gui", "tkinter", "security"]
requires-python = ">=3.8"
dependencies = [
    "tkinterdnd2>=0.3.0",
    "Pillow>=9.0.0",
    "torch>=2.0.0",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.991",
    "pre-commit>=2.20.0",
]
build = [
    "pyinstaller>=5.0.0",
    "pyinstaller-hooks-contrib>=2022.0",
]

[project.urls]
Homepage = "https://github.com/fuyouawa/steganography-encoder"
Repository = "https://github.com/fuyouawa/steganography-encoder"
Issues = "https://github.com/fuyouawa/steganography-encoder/issues"

[project.scripts]
steganography-encoder = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["*", "utils/*", "utils/video/*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]